# blackroad-sdk

./: .coverage  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: automerge.yml  bot-issue-triage.yml  bot-pr-review.yml  ci.yml  deploy-workers.yml  publish-python.yml
blackroad_sdk/: __init__.py  agents.py  client.py  coordination.py  memory.py
python/blackroad/: __init__.py  client.py
sdk-javascript/: package-lock.json  package.json  tsconfig.json
sdk-javascript/src/: agents.ts  client.ts  errors.ts  graphql.ts  hooks.ts  index.ts  react.ts  streaming.ts  tasks.ts  types.ts  webhooks.ts
sdk-python/: pyproject.toml
sdk-python/blackroad/: __init__.py  async_client.py  types.py
sdk-python/examples/: basic_usage.py
sdk-python/src/blackroad_sdk/: __init__.py  agents.py  client.py  memory.py
sdk-python/tests/: test_client.py  test_types.py
sdk-react/: package.json
sdk-react/src/: context.tsx  index.ts
sdk-react/src/hooks/: useAgents.ts  useChat.ts  useGateway.ts  useMemory.ts  useStream.ts  useTasks.ts
sdk-swift/: Package.swift  README.md
sdk-swift/Sources/BlackRoad/: BlackRoadClient.swift
src/: index.ts
src/types/: core.ts
tests/: __init__.py  client.test.ts  test_agents.py  test_client.py  test_coordination.py  test_memory.py  test_trinary.py
workers/gateway/: package.json  tsconfig.json  wrangler.toml
workers/gateway/src/: index.ts
