[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "blackroad-sdk"
version = "0.1.0"
description = "Official Python SDK for BlackRoad OS — AI agents, memory chains, and gateway APIs"
readme = "README.md"
license = {text = "UNLICENSED"}
authors = [
  {name = "BlackRoad OS, Inc.", email = "sdk@blackroad.io"},
]
keywords = ["ai", "agents", "blackroad", "memory", "llm"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.23.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.4.0",
]
async = [
  "anyio>=4.0.0",
]

[project.urls]
Homepage = "https://blackroad.ai"
Repository = "https://github.com/BlackRoad-OS-Inc/blackroad-sdk"
Documentation = "https://docs.blackroad.ai/sdk/python"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
