[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackroad"
version = "1.0.0"
description = "Official Python SDK for BlackRoad OS — agents, memory, tasks, chat"
license = {text = "Proprietary"}
requires-python = ">=3.9"
authors = [{name = "BlackRoad OS, Inc.", email = "alexa@blackroad.io"}]
keywords = ["blackroad", "ai", "agents", "sdk", "edge-ai"]
dependencies = []

[project.optional-dependencies]
async = ["httpx>=0.25.0"]
all = ["httpx>=0.25.0"]
dev = ["httpx>=0.25.0", "pytest>=7.0", "pytest-asyncio>=0.21"]

[project.urls]
Homepage = "https://blackroad.io"
Repository = "https://github.com/BlackRoad-OS-Inc/blackroad-sdk"

[tool.hatch.build.targets.wheel]
packages = ["blackroad"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
